--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "nette/nette": "~2.1.0"
+        "nette/nette": ">=2.1.0,<2.3.0"
     },
     "autoload": {
         "classmap": ["src/"]
